# Stm32f3-Starter-code

./: Cargo.toml  README.md  cmd.txt  openocd.gdb
src/: lib.rs
