[package]
name = "stm32_starter_code"
version = "0.1.0"
authors = ["alifya53 <alifyahussian53@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.5.6"
cortex-m-rt = "0.6.3"
panic-itm = "0.4.0"


[dependencies.f3]
features = ["rt"]
version = "0.6.1"
